# Gimbal-Project

./: CMakeLists.txt  README.md  main.c
data/DOA/: DOA_Model.out  DOA_Model_data.out
data/designation/: Designation_data.out
data/freq_response/: Frequency_Response_10.00Hz.out  Frequency_Response_11.00Hz.out  Frequency_Response_12.00Hz.out  Frequency_Response_4.30Hz.out  Frequency_Response_4.70Hz.out  Frequency_Response_5.10Hz.out  Frequency_Response_5.50Hz.out  Frequency_Response_5.90Hz.out  Frequency_Response_6.30Hz.out  Frequency_Response_6.70Hz.out  Frequency_Response_7.10Hz.out  Frequency_Response_8.00Hz.out  Frequency_Response_9.00Hz.out  Motor_Validation.out
data/linearization/: Linearization.out  Linearization_1.out  Linearization_2.out  Linearization_3.out  Linearization_4.out  Linearization_5.out  Validation_Result.out  Validation_Result_1.out  Validation_Result_2.out
data/potentio/: Potentiometer_Model.out  Potentiometer_Model_final.out
data/stabilization/: Stabilization.out
include/: Gimbal.h  NIDAQmx.h
libs/: NIDAQmx.lib
matlab/: LPF_TF.m
matlab/DOA/: DOA_modeling.m
matlab/Designation/: Controller_Designation_Design.asv  Controller_Designation_Design.m  Controller_Designation_Pole_Placement.m  Controller_Designation_Simul.slx  Controller_Designation_Simul.slxc  Controller_Designation_Simul_PD.slx  Controller_Designation_Simulation.m
matlab/Linearization/: Controller_Designation_Simul.slxc  Linearzation_result.m  Validation_Linearzation.m
matlab/Motor Modeling/: Motor_Modeling.asv  Motor_Modeling.m  Motor_Validation.m  (+3 more)
src/: Gimbal.c
(+65 files in other folders)
